--- a/pst/pom.xml
+++ b/pst/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>pst</artifactId>
 	<packaging>jar</packaging>
-	<name>${project.groupId}:{$project.artifactId}</name>
+	<name>${project.groupId}:${project.artifactId}</name>
 	<description>A library for reading Microsoft Outlook PST files.</description>
 
 	<parent>
