Add util and swingutil to deploy-ossrh modeuls so explorer will build

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
 			<modules>
 				<module>pst</module>
 				<module>explorer</module>
+				<module>util</module>
+				<module>swingutil</module>
 			</modules>
 
 			<activation>
