--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
 						<artifactId>maven-release-plugin</artifactId>
 						<version>2.5.3</version>
 						<configuration>
-							<autoVersionsSubmodules>true</autoVersionsSubmodules>
+							<autoVersionSubmodules>true</autoVersionsSubmodules>
 							<useReleaseProfile>false</useReleaseProfile>
 							<releaseProfiles>release</releaseProfiles>
 							<goals>deploy</goals>
