--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>io.github.jmcleodfoss</groupId>
 	<artifactId>pst-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<url>https://io.github.com/Jmcleodfoss/pst</url>
 	<description>Library for reading pst files, and some ancillary libraries, a Swing app, and a JSF web app.</description>
