--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
 						<version>1.6.7</version>
 						<extensions>true</extensions>
 						<configuration>
-							<serverId>osshr</serverId>
+							<serverId>ossrh</serverId>
 							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 							<autoReleaseAfterClose>true</autoReleaseAfterClose>
 						</configuration>
