--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					d<compilerArgs>
+					<compilerArgs>
 						<arg>-Xlint:deprecation</arg>
 					</compilerArgs>
 				</configuration>
