Attempt to fix Issue #1

--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,8 @@
 					<compilerArgs>
 						<arg>-Xlint:deprecation</arg>
 					</compilerArgs>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 		</plugins>
