Fix case problem with name of localebean module

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 
 			<modules>
 				<module>explorer</module>
-				<module>localeBean</module>
+				<module>localebean</module>
 				<module>pst</module>
 				<module>pstExtractor</module>
 				<module>swingutil</module>
