--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,40 @@
 		</profile>
 
 		<profile>
+			<!-- Use Java 8 and its version of JavaFX -->
+			<id>jdk-8</id>
+
+			<activation>
+				<!--activeByDefault>false</activeByDefault-->
+				<activeByDefault>true</activeByDefault>
+			</activation>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-toolchains-plugin</artifactId>
+						<version>3.0.0</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>toolchain</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<toolchains>
+								<jdk>
+									<version>1.8></version>
+								</jdk>
+							</toolchains>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
 			<!-- Developer (private + protected + public) Javadoc -->
 			<id>dev-doc</id>
 
