--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 
 	<properties>
 		<project.scm.id>github</project.scm.id>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<scm>
