--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,7 @@
 			<id>jdk-8</id>
 
 			<activation>
-				<!--activeByDefault>false</activeByDefault-->
-				<activeByDefault>true</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 
 			<build>
