Include dependencies required for Javadoc

--- a/explorer/pom.xml
+++ b/explorer/pom.xml
@@ -60,4 +60,37 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<show>public</show>
+
+					<additionalDependencies>
+						<additionalDependency>
+							<groupId>io.github.jmcleodfoss</groupId>
+							<artifactId>pst</artifactId>
+							<version>1.0.1-SNAPSHOT</version>
+						</additionalDependency>
+
+						<additionalDependency>
+							<groupId>io.github.jmcleodfoss</groupId>
+							<artifactId>swingutil</artifactId>
+							<version>1.0.1-SNAPSHOT</version>
+						</additionalDependency>
+
+						<additionalDependency>
+							<groupId>io.github.jmcleodfoss</groupId>
+							<artifactId>util</artifactId>
+							<version>1.0.1-SNAPSHOT</version>
+						</additionalDependency>
+					</additionalDependencies>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
