--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -69,4 +69,36 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<show>public</show>
+					<additionalDependencies>
+						<additionalDependency>
+							<groupId>io.github.jmcleodfoss</groupId>
+							<artifactId>pst</artifactId>
+							<version>1.0.1-SNAPSHOT</version>
+						</additionalDependency>
+
+						<additionalDependency>
+							<groupId>org.apache.myfaces.core</groupId>
+							<artifactId>myfaces-bundle</artifactId>
+							<version>2.3.5</version>
+						</additionalDependency>
+
+						<additionalDependency>
+							<groupId>org.apache.myfaces.tomahawk</groupId>
+							<artifactId>tomahawk20</artifactId>
+							<version>1.1.14</version>
+						</additionalDependency>
+					</additionalDependencies>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
