--- a/localebean/pom.xml
+++ b/localebean/pom.xml
@@ -21,6 +21,18 @@
 			<artifactId>myfaces-bundle</artifactId>
 			<version>2.3.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
