--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -31,6 +31,7 @@
 			<version>2.3.5</version>
 		</dependency>
 		<dependency>
+			<!-- for file upload -->
 			<groupId>org.apache.myfaces.tomahawk</groupId>
 			<artifactId>tomahawk20</artifactId>
 			<version>1.1.14</version>
