--- a/localebean/pom.xml
+++ b/localebean/pom.xml
@@ -17,9 +17,10 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-bundle</artifactId>
-			<version>2.3.5</version>
+			<groupId>javax</groupId>
+			<artifactId>javaee-web-api</artifactId>
+			<version>8.0</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
