--- a/swingutil/pom.xml
+++ b/swingutil/pom.xml
@@ -6,7 +6,7 @@
 	<version>1.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
-	<description>A swing library for reading Microsoft Outlook PST files.</description>
+	<description>Swing support library for pst library for reading Microsoft Outlook PST files.</description>
 
 	<parent>
 		<groupId>io.github.jmcleodfoss</groupId>
