--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -99,6 +99,16 @@
 							<version>1.1.1-SNAPSHOT</version>
 						</additionalDependency>
 						<additionalDependency>
+							<groupId>javax.enterprise</groupId>
+							<artifactId>cdi-api</artifactId>
+							<version>2.0</version>
+						</additionalDependency>
+						<additionalDependency>
+							<groupId>javax.inject</groupId>
+							<artifactId>javax.inject</artifactId>
+							<version>1</version>
+						</additionalDependency>
+						<additionalDependency>
 							<groupId>org.apache.myfaces.core</groupId>
 							<artifactId>myfaces-bundle</artifactId>
 							<version>2.3.5</version>
