--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>xml</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.2</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>A library for simplistic XML processing.</description>
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>io.github.jmcleodfoss</groupId>
 		<artifactId>pst-parent</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
+		<version>1.1.2</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -19,12 +19,12 @@
 		<dependency>
 			<groupId>io.github.jmcleodfoss</groupId>
 			<artifactId>pst</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>io.github.jmcleodfoss</groupId>
 			<artifactId>util</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
+			<version>1.1.2</version>
 		</dependency>
 	</dependencies>
 
@@ -39,12 +39,12 @@
 						<additionalDependency>
 							<groupId>io.github.jmcleodfoss</groupId>
 							<artifactId>pst</artifactId>
-							<version>1.1.1-SNAPSHOT</version>
+							<version>1.1.2</version>
 						</additionalDependency>
 						<additionalDependency>
 							<groupId>io.github.jmcleodfoss</groupId>
 							<artifactId>util</artifactId>
-							<version>1.1.1-SNAPSHOT</version>
+							<version>1.1.2</version>
 						</additionalDependency>
 					</additionalDependencies>
 				</configuration>
