--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -32,6 +32,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    # Set up the correct Java version for your project
+    # Please comment out, if your project does not contain Java source code.
+    - name: Set up JDK 14
+      uses: actions/setup-java@v1
+      with:
+        java-version: 14
+        java-package: jdk+fx
+
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
