--- a/.codacy.yaml
+++ b/.codacy.yaml
@@ -1,6 +1,6 @@
 ---
 exclude_paths:
   - "**.bin"
-  - "**.xhtml"
+  - "**.csv"
   - "**.txt"
   - "pstExtractor/src/main/webapp/resources/js/.eslintrc"
