--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>pstExtractor</artifactId>
-	<version>1.2.0</version>
+	<version>1.1.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 
