--- a/pstExtractor/src/main/webapp/WEB-INF/web.xml
+++ b/pstExtractor/src/main/webapp/WEB-INF/web.xml
@@ -73,4 +73,7 @@
 		<url-pattern>*.jsf</url-pattern>
 	</servlet-mapping>
 
+	<session-config>
+		<session-timeout>15</session-timeout>
+	</session-config>
 </web-app>
