--- a/pstExtractor/src/main/webapp/WEB-INF/web.xml
+++ b/pstExtractor/src/main/webapp/WEB-INF/web.xml
@@ -75,5 +75,10 @@
 
 	<session-config>
 		<session-timeout>15</session-timeout>
+		<tracking-mode>COOKIE</tracking-mode>
+		<cookie-config>
+			<http-only>true</http-only>
+			<secure>true></secure>
+		</cookie-config>
 	</session-config>
 </web-app>
