--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
-			<version>2.0</version>
+			<version>2.0.SP1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -48,7 +48,7 @@
 			<!-- For TomcatEE, an equivalent library is provided so we need to ensure the dependency on Apache Tomahawk doesn't pull this in transitively. -->
 			<groupId>org.apache.myfaces.core</groupId>
 			<artifactId>myfaces-bundle</artifactId>
-			<version>2.3.5</version>
+			<version>3.0.0-RC1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -66,7 +66,7 @@
 			<!-- Jar file for JavaScript jquery -->
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
-			<version>1.7.2</version>
+			<version>3.5.1</version>
 		</dependency>
 	</dependencies>
 
