--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -63,6 +63,11 @@
 			<version>2.2.1-b05</version>
 		</dependency>
 		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.faces</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
 			<!-- Jar file for JavaScript jquery -->
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
