--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -101,7 +101,7 @@
 						<additionalDependency>
 							<groupId>javax.enterprise</groupId>
 							<artifactId>cdi-api</artifactId>
-							<version>2.0</version>
+							<version>2.0.SP1</version>
 						</additionalDependency>
 						<additionalDependency>
 							<groupId>javax.inject</groupId>
