--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -41,9 +41,9 @@
 		</dependency>
 		<dependency>
 			<!-- For TomcatEE, an equivalent library is provided so we need to ensure the dependency on Apache Tomahawk doesn't pull this in transitively. -->
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.2</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.4</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
