--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -69,8 +69,8 @@
 		<dependency>
 			<!-- For TomcatEE, an equivalent library is provided so we need to ensure the dependency on Apache Tomahawk doesn't pull this in transitively. -->
 			<groupId>javax.el</groupId>
-			<artifactId>el-api</artifactId>
-			<version>2.2.1-b04</version>
+			<artifactId>javax.el-api</artifactId>
+			<version>3.0.1-b06</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
