--- a/pstExtractor/src/main/webapp/WEB-INF/web.xml
+++ b/pstExtractor/src/main/webapp/WEB-INF/web.xml
@@ -18,37 +18,9 @@
 		<param-value>Development</param-value>
 	</context-param>
 
-	<context-param>
-		<param-name>org.apache.myfaces.EXPRESSION_FACTORY</param-name>
-		<param-value>com.sun.el.ExpressionFactoryImpl</param-value>
-	</context-param>
-
-	<context-param>
-		<param-name>com.sun.faces.expressionFactory</param-name>
-		<param-value>com.sun.el.ExpressionFactoryImpl</param-value>
-	</context-param>
-
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>index.jsf</welcome-file>
 	</welcome-file-list>
-
-	<filter>
-		<filter-name>MyFacesExtensionsFilter</filter-name>
-		<filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
-		<init-param>
-			<param-name>uploadMaxFileSize</param-name>
-			<param-value>500m</param-value>
-			<description>Set the size limit for uploaded files.
-				Format: 10 - 10 bytes
-				10k - 10 KB
-				10m - 10 MB
-				1g - 1 GB
-			</description>
-		</init-param>
-	</filter>
 
 	<multipart-config>
 		<!-- Set server upload size to match MyFacesExtensionsFilter -->
@@ -57,20 +29,24 @@
 		<file-size-threshold>0</file-size-threshold>
 	</multipart-config>
 
+	<filter>
+		<filter-name>LoggingMdcFilter</filter-name>
+		<filter-class>org.apache.myfaces.tobago.internal.webapp.LoggingMdcFilter</filter-class>
+	</filter>
 	<filter-mapping>
-		<filter-name>MyFacesExtensionsFilter</filter-name>
-		<servlet-name>Faces Servlet</servlet-name>
+		<filter-name>LoggingMdcFilter</filter-name>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
 	<servlet>
-		<servlet-name>Faces Servlet</servlet-name>
+		<servlet-name>FacesServlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>Faces Servlet</servlet-name>
-		<url-pattern>*.jsf</url-pattern>
+		<servlet-name>FacesServlet</servlet-name>
+		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 
 	<session-config>
@@ -81,4 +57,5 @@
 			<secure>true></secure>
 		</cookie-config>
 	</session-config>
+
 </web-app>
