Update extensions for links

--- a/pstExtractor/src/main/resources/text-resources.properties
+++ b/pstExtractor/src/main/resources/text-resources.properties
@@ -2,10 +2,10 @@
 about.title.text=About the PST Extractor Demonstration Application
 
 accessDenied.title.format=Too Many Incorrect Password Attempts for {0}
-accessDenied.description.format=You did not provide the correct password for {0} after {1} attempts. We are sure you know it, but just in case you are trying to crack passwords on PST files you shouldn&apos;t see, we will inconvenience you by making you start over.
+accessDenied.description.format=You did not provide the correct password for {0} after {1} attempts. We are sure you know it, but just in case you are trying to crack passwords on PST files you shouldn&apos;t see, we will inconvenience you by <a href="ExtractionForm.xhtml">making you start over</a>.
 
 corruptPST.title.format=Corrupt PST File {0}
-corruptPST.description.format=The file {0} is either corrupt or not a PST file. Please <a href="ExtractionForm.jsf">click here to select a valid PST file.</a>
+corruptPST.description.format=The file {0} is either corrupt or not a PST file. Please <a href="ExtractionForm.xhtml">click here to select a valid PST file.</a>
 
 faq.title.text=FAQ
 
@@ -14,12 +14,12 @@ file.label=Select PST File
 help.title.text=Help
 
 incorrectPassword.title.format=Incorrect Password for PST File {0}
-incorrectPassword.description.format=The password provided for the PST file {0} is incorrect. You may enter another password on this page, or <a href="ExtractionForm.jsf">click here to select a new PST file</a>. Note that this is attempt {1}; you are permitted a total of {2} attempts before being kicked back to the original PST selection page.
+incorrectPassword.description.format=The password provided for the PST file {0} is incorrect. You may enter another password on this page, or <a href="ExtractionForm.xhtml">click here to select a new PST file</a>. Note that this is attempt {1}; you are permitted a total of {2} attempts before being kicked back to the original PST selection page.
 
 home.title.text=The PST File Extraction Demonstration Application
 
 notPST.title.format=Invalid PST File {0}
-notPST.description.format=The file {0} does not appear to be a PST file. Please provide a valid PST file. Please <a href="ExtractionForm.jsf">click here to select a valid PST file.</a>
+notPST.description.format=The file {0} does not appear to be a PST file. Please provide a valid PST file. Please <a href="ExtractionForm.xhtml">click here to select a valid PST file.</a>
 
 processingProblem.title.format=Server Problem Processing PST File {0}
 processingProblem.description.format=The server encountered a problem processing the PST file {0}. Please try again later.
