--- a/pstExtractor/src/main/webapp/WEB-INF/web.xml
+++ b/pstExtractor/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,7 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0"
 >
+	<display-name>PST Extractor</display-name>
 
 	<description>PST Appointments/Contacts/Journal Entries/Sticky Notes/Tasks Extraction Servlet</description>
 
