Set various useful context-params

--- a/pstExtractor/src/main/webapp/WEB-INF/web.xml
+++ b/pstExtractor/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,21 @@
 		<param-value>Development</param-value>
 	</context-param>
 
+	<context-param>
+		<param-name>com.sun.faces.validateXml</param-name>
+		<param-value>true</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+		<param-value>true</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
+		<param-value>true</param-value>
+	</context-param>
+
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
