--- a/pstExtractor/src/main/webapp/WEB-INF/web.xml
+++ b/pstExtractor/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,7 @@
 >
 	<display-name>PST Extractor</display-name>
 
-	<description>PST Appointments/Contacts/Journal Entries/Sticky Notes/Tasks Extraction Servlet</description>
-
-	<display-name>Servlet to extract Appointments/Contacts/Journal Entries/Sticky Notes/Tasks from MS Outlook PST Files</display-name>
+	<description>Servlet to extract Appointments/Contacts/Journal Entries/Sticky Notes/Tasks from MS Outlook PST Files</description>
 
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
