Improved resolution to provide javax.inject.*

--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -53,9 +53,14 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<!-- This resolves
+				javax.inject.Inject
+				javax.inject.Named
+			-->
+			<groupId>org.apache.servicemix.bundles</groupId>
+			<artifactId>org.apache.servicemix.bundles.javax-inject</artifactId>
+			<version>1_3</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.myfaces.tobago</groupId>
