Use myfaces.version macro consistently

--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -115,7 +115,7 @@
 						<additionalDependency>
 							<groupId>org.apache.myfaces.core</groupId>
 							<artifactId>myfaces-bundle</artifactId>
-							<version>2.3.6</version>
+							<version>${myfaces.version}</version>
 						</additionalDependency>
 					</additionalDependencies>
 				</configuration>
